# SolarSystemSim

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  demo.py  diagnostics_photosphere.py  generate_solar_system.py  habitable_zone.py  main.py  nbody.py  planets.py  pyproject.toml  random_systems.py  render_photosphere.py  render_skyview.py  secular.py  stellar.py  system.py  test_sanity.py  visualization.py
goldilocks/: animation.py  backend.py  bodyview.py  chromosphere.py  habitability.py  habitable_zone.py  kepler.py  moon_surface.py  moons.py  nbody.py  nbody_moons.py  noise.py  parallel.py  photosphere.py  planets.py  random_systems.py  roche.py  secular.py  skyview.py  solar_system.py  stability.py  starsurface.py  stellar.py  stellar_state.py  system.py  visualization.py  viz_solar_system.py
research/: sun_render.md  sun_render_checklist.md
