[project]
name = "solarsystemsim"
version = "0.1.0"
description = "Goldilocks zone calculator for N-star systems with N-body planet dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goldilocks"]
