[project]
name = "solarsystemsim"
version = "0.1.0"
description = "Goldilocks zone calculator for N-star systems with N-body planet dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
]

# Optional accelerators.  The code auto-detects these at runtime and
# degrades cleanly to single-GPU / CPU-only when they are absent:
#   * gpu   -- CuPy backend (pick the wheel matching your CUDA toolkit;
#              cupy-cuda12x for CUDA 12, cupy-cuda11x for CUDA 11).
#   * accel -- optional CPU JIT (numba) for the N-body inner loop.
# MP4 output additionally needs `ffmpeg` on PATH (frames are streamed
# straight into it); drivers skip the MP4 gracefully if it is missing.
[project.optional-dependencies]
gpu = ["cupy-cuda13x>=13.0"]
accel = ["numba>=0.60"]
# warp -- NVIDIA Warp JIT kernels for the photosphere step.  Warp
# compiles the same @wp.kernel to CPU *or* CUDA, so this is the fast
# path on a multi-GPU box and still runs (and is verified) CPU-only.
warp = ["warp-lang>=1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goldilocks"]
